Fixed some issues with header bar and sidebar spacing and padding

--- a/src/_headings.scss
+++ b/src/_headings.scss
@@ -56,7 +56,7 @@ a.title h1.title {
 }
 
 .cp__header.electron-mac {
-  height: var(--ct-header-height);
+  height: calc(var(--ls-headbar-height) + var(--ls-headbar-inner-top-padding));
 }
 
 #search {
